--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="shortcut icon" href="souzanilologo.png" type="souzanilologo">
+  <link rel="shortcut icon" href="souzanilologo.png" type="image/png">
   <title>Biblioteca Souza Nilo</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+NSW:wght@100..400&display=swap" rel="stylesheet">
-  
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img src="souzanilologo.png" alt="" class="logo-insigna" draggable="false">
+    <img src="souzanilologo.png" alt="Logo Souza Nilo" class="logo-insigna" draggable="false">
     <div class="titulo-escola">Escola Estadual Professor Souza Nilo</div>
     <button id="btn-login">Login</button>
   </header>
@@ -21,28 +20,11 @@
   <div class="container">
     <input type="text" class="campo-pesquisa" id="pesquisa" placeholder="Pesquisar livros...">
 
-    <div class="livros" id="lista-livros">
-      <div class="livro-card">
-        <h3>Dom Casmurro</h3>
-        <p>Machado de Assis</p>
-        <p>Disponíveis: 4</p>
-      </div>
+    <div id="botoes-generos" class="botoes-generos"></div>
 
-      <div class="livro-card">
-        <h3>O Pequeno Príncipe</h3>
-        <p>Antoine de Saint-Exupéry</p>
-        <p>Disponíveis: 2</p>
-      </div>
-
-      <div class="livro-card">
-        <h3>A Hora da Estrela</h3>
-        <p>Clarice Lispector</p>
-        <p>Disponíveis: 1</p>
-      </div>
-    </div>
+    <div id="generos"></div>
   </div>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
-
