--- a/painel-bibliotecario.html
+++ b/painel-bibliotecario.html
@@ -37,11 +37,11 @@
       <h2>Registrar Novo Livro</h2>
       <form id="form-registrar-livro">
         <label>Nome:<br />
-          <input type="text" id="nomeLivro" required placeholder="Nome" />
+          <input type="text" id="nomeLivro" required placeholder="Nome do Livro" />
         </label>
 
         <label>Autor:<br />
-          <input type="text" id="autorLivro" required placeholder="Autor" />
+          <input type="text" id="autorLivro" required placeholder="Nome do Autor" />
         </label>
 
         <label>Gênero: <span style="color:#ff4444">*</span><br />
@@ -56,6 +56,10 @@
     <ul id="listaGenerosModal"></ul>
   </div>
 </div>
+
+        <label>Número da Prateleira:<br />
+          <input type="text" id="numeroPrateleira" placeholder="Local onde o livro está" />
+        </label>
   
         <label>Volume (opcional):<br />
           <input type="text" id="volumeLivro" placeholder="Deixe vazio se não houver" />
