--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <header>
     <img src="souzanilologo.png" alt="Logo Souza Nilo" class="logo-insigna" draggable="false">
     <div class="titulo-escola">Escola Estadual Professor Souza Nilo</div>
-    <button id="btn-login">Login</button>
+    <button id="btn-login">Login Bibliotecário</button>
+    <button id="btn-login-leitor">Login Leitor</button>
   </header>
 
   <div class="container">
