--- a/login-leitor.html
+++ b/login-leitor.html
@@ -12,7 +12,7 @@
   <div class="login-bg">
     <div class="login-card">
       <img src="souzanilologo.png" alt="" class="logo" draggable="false">
-      <h2>Olá Bibliotecário(a),<br>seja bem-vindo!</h2>
+      <h2>Olá Leitor(a),<br>seja bem-vindo!</h2>
       <form id="loginForm">
         <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="senha" placeholder="Senha" required>
