--- a/painel-bibliotecario.html
+++ b/painel-bibliotecario.html
@@ -10,8 +10,11 @@
 <body class="painel-bg">
   <header class="painel-header">
     <img src="souzanilologo.png" alt="" class="logo-escola" draggable="false" />
-    <h1>Central Bibliotecário(a)</h1>
-    <button id="logoutBtn" class="logout-btn">Logout</button>
+    <div class="titulo-container">
+      <h1>Central Bibliotecário(a)</h1>
+      <span id="user-email" class="user-email"></span>
+    </div>
+    <button id="logoutBtn" class="logout-btn">Sair</button>
   </header>
 
   <main class="painel-conteudo">
