--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
   <div class="container">
     <input type="text" class="campo-pesquisa" id="pesquisa" placeholder="Pesquisar livros...">
-
     <div id="botoes-generos" class="botoes-generos"></div>
-
-    <div id="generos"></div>
+    <div id="generos" class="livros"></div>
   </div>
+
+  <!-- Botão flutuante de Tema -->
+  <button id="btn-tema" class="btn-flutuante">🌙</button>
 
   <script type="module" src="script.js"></script>
 </body>
