--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+NSW:wght@100..400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="console-block.js"></script>
+
 </head>
 <body>
   <header>
