--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
   <link rel="shortcut icon" href="souzanilologo.png" type="souzanilologo">
   <title>Login - Biblioteca Souza Nilo</title>
   <link rel="stylesheet" href="login.css">
+  <script src="console-block.js"></script>
 </head>
 <body>
 
@@ -16,6 +17,7 @@
       <form id="loginForm">
         <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="senha" placeholder="Senha" required>
+        <button type="button" id="toggleSenha">Mostrar Senha</button>
         <button type="submit">Entrar</button>
       </form>
       <p id="mensagemErro" class="erro"></p>
